; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libarchive/libarchive/extr_archive_string.c_best_effort_strncat_to_utf16be.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libarchive/libarchive/extr_archive_string.c_best_effort_strncat_to_utf16be.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.archive_string = type { i32 }
%struct.archive_string_conv = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.archive_string*, i8*, i64, %struct.archive_string_conv*)* @best_effort_strncat_to_utf16be to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @best_effort_strncat_to_utf16be(%struct.archive_string* %0, i8* %1, i64 %2, %struct.archive_string_conv* %3) #0 {
  %5 = alloca %struct.archive_string*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca %struct.archive_string_conv*, align 8
  store %struct.archive_string* %0, %struct.archive_string** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  store %struct.archive_string_conv* %3, %struct.archive_string_conv** %8, align 8
  %9 = load %struct.archive_string*, %struct.archive_string** %5, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = load i64, i64* %7, align 8
  %12 = load %struct.archive_string_conv*, %struct.archive_string_conv** %8, align 8
  %13 = call i32 @best_effort_strncat_to_utf16(%struct.archive_string* %9, i8* %10, i64 %11, %struct.archive_string_conv* %12, i32 1)
  ret i32 %13
}

declare dso_local i32 @best_effort_strncat_to_utf16(%struct.archive_string*, i8*, i64, %struct.archive_string_conv*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
